--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.16",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "@notionhq/client": "^1.0.1"
   }
 }
