--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "homepage": "https://github.com/LoKo-DevGirls/memory-journey-be#readme",
   "dependencies": {
+    "@notionhq/client": "^1.0.1",
+    "@supabase/supabase-js": "^2.25.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.16",
-    "winston": "^3.7.2",
-    "@notionhq/client": "^1.0.1"
+    "winston": "^3.7.2"
   }
 }
