--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.16",
+    "openai": "^3.2.1",
     "winston": "^3.7.2",
-    "openai": "^3.2.1"
+    "ws": "^8.13.0"
   }
 }
